# flake8-secure-coding-standard

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  flake8_secure_coding_standard.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  draft_release.yml  format.yml  publish_release.yml  pull_request.yml
tests/: assert_test.py  builtin_open_test.py  eval_exec_test.py  jsonpickle_decode_test.py  marshal_load_test.py  os_chmod_test.py  os_mkdir_mkfifo_mknod_test.py  os_open_test.py  os_realpath_test.py  pdb_test.py  pickle_load_test.py  plugin_options_test.py  shell_exec_test.py  shelve_open_test.py  shlex_quote_test.py  tempfile_mktemp_test.py  yaml_load_test.py
