[metadata]
name = flake8-secure-coding-standard
description = Flake8 plugin adding some checks to make Python code adhere to more secure coding standard
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Takishima/flake8-secure-coding-standard
author = Damien Nguyen
author_email = ngn.damien@gmail.com
license = Apache2
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
py_modules = flake8_secure_coding_standard
python_requires = >=3.6
setup_requires =
  setuptools_scm[toml]
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"

[options.entry_points]
flake8.extension =
    SCS=flake8_secure_coding_standard:Plugin

[options.extras_require]
test =
    mock
    pytest
    pytest-cov
    pytest-mock



[bdist_wheel]
universal = True


# ==============================================================================

[flake8]

max-line-length = 120
exclude =
        .git,
        __pycache__,
        build,
        dist,
        __init__.py
docstring-quotes = """

# ==============================================================================
